# Tutorial_NEAR_Rust

./: LICENSE  README.md  Readme.md
EN/: README.md
EN/lesson_1_contract/: Readme.md
EN/lesson_1_contract/src/: lib.rs
EN/lesson_2_ownership/: Readme.md
EN/lesson_2_ownership/src/: lib.rs
EN/lesson_3_structs/: Readme.md
EN/lesson_4_modules/: Readme.md
EN/lesson_5_macro_usage/: Cargo.toml  Readme.md
EN/lesson_6_enums/: Cargo.toml  Readme.md
ES/: README.md
ES/lesson_1_contract/: Readme.md
ES/lesson_2_ownership/: Readme.md
ES/lesson_3_structs/: Readme.md
ES/lesson_4_modules/: Readme.md
ES/lesson_5_macro_usage/: Readme.md
ES/lesson_6_enums/: Readme.md
PT-BR/: README.md
PT-BR/lesson_2_ownership/: Readme.md
PT-BR/lesson_3_structs/: Cargo.toml  Readme.md
PT-BR/lesson_4_modules/: Cargo.toml  Readme.md
PT-BR/lesson_5_macro_usage/: Readme.md
PT-BR/lesson_6_enums/: Cargo.toml  Readme.md
PT-BR/static/: Readme.md
lesson_1_contract/: Cargo.toml  Readme.md
lesson_1_contract/src/: lib.rs
lesson_2_ownership/: Cargo.toml  Readme.md
lesson_2_ownership/src/: lib.rs
lesson_3_structs/: Cargo.toml  Readme.md
lesson_3_structs/src/: lib.rs
lesson_4_modules/: Readme.md
lesson_4_modules/src/: another_module.rs  lib.rs  yet_another_module.rs
lesson_4_modules/tests/: another.rs  contract.rs
lesson_5_macro_usage/: Readme.md
lesson_5_macro_usage/src/: lib.rs
lesson_6_enums/: Cargo.toml  Readme.md
lesson_6_enums/src/: lib.rs
static/: Readme.md
static/tutorials/: cargo.md  nearcli.md  rust.md  setup-nearcli.md
(+103 files in other folders)
